--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
         android:layout_height="100dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="23dp"
+        android:onClick="lengthConversion"
         android:scaleType="fitCenter"
+        android:src="@drawable/tape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/temperatureButton"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/tape" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/temperatureButton"
@@ -25,11 +26,12 @@
         android:layout_marginStart="36dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="23dp"
+        android:onClick="temperatureConversion"
         android:scaleType="fitCenter"
+        android:src="@drawable/temp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/weightButton"
-        app:layout_constraintStart_toEndOf="@+id/measureButton"
-        android:src="@drawable/temp" />
+        app:layout_constraintStart_toEndOf="@+id/measureButton" />
 
     <ImageButton
         android:id="@+id/weightButton"
@@ -38,11 +40,12 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
+        android:onClick="weightConversion"
         android:scaleType="fitCenter"
+        android:src="@drawable/weight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/temperatureButton"
-        android:src="@drawable/weight" />
+        app:layout_constraintStart_toEndOf="@+id/temperatureButton" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -78,7 +81,6 @@
         android:layout_marginTop="79dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="77dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/placeholer2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/output1"
@@ -92,7 +94,6 @@
         android:layout_marginTop="79dp"
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="77dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/output2"
         app:layout_constraintEnd_toStartOf="@+id/placeholder1"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +106,6 @@
         android:layout_marginStart="123dp"
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="186dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
         app:layout_constraintEnd_toStartOf="@+id/placeholder3"
         app:layout_constraintStart_toStartOf="parent" />
@@ -117,7 +117,6 @@
         android:layout_marginStart="123dp"
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="77dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/output3"
         app:layout_constraintEnd_toStartOf="@+id/placeholer2"
         app:layout_constraintStart_toStartOf="parent" />
@@ -129,7 +128,6 @@
         android:layout_marginStart="67dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="186dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/weightButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/output3" />
@@ -141,7 +139,6 @@
         android:layout_marginStart="67dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="77dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/placeholder3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/output2" />
