onClick Methods Completed
onClick of ImageButtons completed. Unit conversions are done accordingly.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,8 @@
         android:layout_marginTop="79dp"
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="77dp"
+        android:textColor="#D30B0B"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/output2"
         app:layout_constraintEnd_toStartOf="@+id/placeholder1"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +107,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="123dp"
         android:layout_marginEnd="67dp"
-        android:layout_marginBottom="186dp"
+        android:layout_marginBottom="180dp"
+        android:textColor="#D30B0B"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
         app:layout_constraintEnd_toStartOf="@+id/placeholder3"
         app:layout_constraintStart_toStartOf="parent" />
@@ -116,7 +120,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="123dp"
         android:layout_marginEnd="67dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginBottom="60dp"
+        android:textColor="#D30B0B"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/output3"
         app:layout_constraintEnd_toStartOf="@+id/placeholer2"
         app:layout_constraintStart_toStartOf="parent" />
